--- a/src/components/MenuList/MenuList.module.css
+++ b/src/components/MenuList/MenuList.module.css
@@ -1,42 +1,39 @@
 .menuList {
-	display: flex;
-	flex-direction: column;
-	gap: 2rem;
-	margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin-bottom: 2rem;
 }
 
 .dessertHeader {
-	font-family: 'Playfair Display', serif;
-	font-size: 2rem;
-	font-weight: 700;	
-	margin-bottom: 2rem;
-	letter-spacing: .8px;
+  font-family: "Playfair Display", serif;
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 2rem;
+  letter-spacing: 0.8px;
 }
 
 .dessertHeader::after {
-	display: inline-block;
-	content: "🪽";
-	font-size: 2.5rem;
+  display: inline-block;
+  content: "🐥";
+  font-size: 2.5rem;
 }
 
 .dessertHeader::before {
-	display: inline-block;
-	content: "🪽";
-	transform: rotateY(180deg);
-	font-size: 2.5rem;
+  display: inline-block;
+  content: "🐥";
+  transform: rotateY(180deg);
+  font-size: 2.5rem;
 }
 
-
-
 @media screen and (min-width: 769px) {
+  .menuList {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 2rem;
+  }
 
-	.menuList {
-		display: flex;
-		flex-flow: row wrap;
-		gap: 2rem;		
-	}	
-
-	.dessertHeader {
-		font-size: 3rem;
-	}
+  .dessertHeader {
+    font-size: 3rem;
+  }
 }
